# telegram_translator

./: .gitignore  CLAUDE.md  README.md  channels.yml.example  config.yml.example  env.example  pyproject.toml  requirements.txt  setup.py
.claude/skills/podcast/: SKILL.md
docs/: publishing.md
podcasts/: .gitignore
scripts/: create_fullpage_art.py  create_the_stack_art.py  daily_podcasts.sh
telegram_translator/: __init__.py  audio_encoder.py  channel_manager.py  cli.py  config_manager.py  content_store.py  digest.py  feed_generator.py  listener.py  persistence_manager.py  podcast_generator.py  publisher.py  summarizer.py  translation_manager.py  web_scraper.py
tests/: test_content_store.py  test_date_consistency.py  test_destinations.py  test_feed_generator.py  test_podcast_sections.py  test_publisher.py
